--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.4",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
