--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "config": "^3.3.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
